--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,23 @@
-.row{
-    background-color: rgb(146, 252, 146);
+    nav{
+        .gmail-text-color{
+            color: #fff;
+        }
+        .search-btn{
+            background-color: #fff;
+        }
+    }
 
+    .first-column{
+        padding-top: 15px;
+        .d-1{
+            background-color: #fff;
+        }
+        
+        .email-time{
+            float: right;
+        }
+    }
+    
     .my-col1{
         background-color: rgb(245, 36, 245);
     }
@@ -12,4 +29,3 @@
     }
 
 
-}
