--- a/css/style.scss
+++ b/css/style.scss
@@ -72,6 +72,8 @@
                 background-color: rgb(216, 211, 211);
                 padding: 10px;
             }
+
+            // d-1 is not a bootstrap class, class given randomly
             .d-1{
                 background-color: #fff;
                 padding: 10px;
